# CmakeDemo

./: CMakeLists.txt  README.md  main.cc
math/: CMakeLists.txt  mymathfunction.cc
